refactored: cart to make the file readable - there is now another issue where a user that has a cart full cant see it if they arent logged in

--- a/frontend/src/components/checkout/cart/cart.css
+++ b/frontend/src/components/checkout/cart/cart.css
@@ -49,15 +49,15 @@
   border-bottom: 1px solid #ddd;
 }
 
-.empty-cart__signedin {
+.cart__signedin {
   background-color: #fff;
   padding: 2rem 1.25rem;
 }
-.empty-cart__signedin-title {
+.cart__signedin-title {
   margin-bottom: 0.75rem;
   font-size: 1.75rem;
   font-weight: 400;
 }
-.empty-cart__signedin-link {
+.cart__signedin-link {
   display: inline;
 }
